--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,14 @@
     "angular-route": "~1.5.0",
     "angular-loader": "~1.5.0",
     "angular-mocks": "~1.5.0",
-    "html5-boilerplate": "^5.3.0"
+    "html5-boilerplate": "^5.3.0",
+    "fullcalendar": "^3.0.1",
+    "angular-ui-calendar": "^1.0.2",
+    "moment": "^2.15.1"
+  },
+  "resolutions": {
+    "angular": "1.5.8",
+    "fullcalendar": "^3.0.1",
+    "moment": "^2.15.1"
   }
 }
