--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "html5-boilerplate": "^5.3.0",
     "fullcalendar": "^3.0.1",
     "angular-ui-calendar": "^1.0.2",
-    "moment": "^2.15.1"
+    "moment": "^2.15.1",
+    "bootstrap-sass": "^3.3.7"
   },
   "resolutions": {
     "angular": "1.5.8",
